--- a/2-pc/karbhiba.html
+++ b/2-pc/karbhiba.html
@@ -32,8 +32,6 @@
         </nav>
       </aside>
       <section>
-        
-
         <h1>Megelőző karbantartás és hibakeresés (2+8 óra)</h1>
 
         <p>A témakörben a tanulók a hardveres és szoftveres karbantartásról, illetve az alapvető hibaelhárításról tanulnak, és megismerkednek a legfontosabb munka- és környezetvédelmi ismeretekkel. A témakör elsajátítását követően a tanuló:</p>
@@ -55,6 +53,12 @@
         <h1 id="szer">Szétszerelés, összeszerelés</h1>
         <p><a href="https://drive.google.com/file/d/1r-g9VzzEUDzRZJP0oQaW1oyIsFZtUHq6/view?usp=sharing" target=_blank>Számítógép összeszerelése</a></p>
         <p><a href="https://drive.google.com/file/d/1FNYciU7UxxN1_bLG7YMaVMxxttK9FdMT/view?usp=sharing" target=_blank>Angyal Krisztián: A hardver, számítógép összeszerelése</a></p>
+
+        <h1>Számítógépes hibaelhárítás</h1>
+        <p><a href="https://drive.google.com/file/d/1o2hAZe7Gan9qkjDmU5dUjb6CyBPmzkFV/view?usp=sharing" target=_blank>A megelőző karbantartás és a hibaelhárítás alapjai</a></p>
+        <p><a href="https://drive.google.com/file/d/1xMxswOxWUgCLy55zGlvetV6YTbrJwPyT/view?usp=sharing" target=_blank>dr. Száldobágyi Zsigmond Csongor: Rendszeres hardver-karbantartási feladatok</a></p>
+        <p><a href="https://drive.google.com/file/d/1FvBXZhsWvV8BThkONZsndInXSJMl_sav/view?usp=sharing" target=_blank>Mátyás János: Számítástechnikai szoftverek</a></p>
+        <p><a href="https://drive.google.com/file/d/1HIB8qw_bD0qc98a-O1kVh4WC-xifnFM6/view?usp=sharing" target=_blank>Király László: Mérések, mérőprogramok</a></p>
       </section>
     </main>
     <footer>
