--- a/5-haloanyagok/bizt.html
+++ b/5-haloanyagok/bizt.html
@@ -22,15 +22,7 @@
 
     <main>
       <aside>
-        <p><a href="../index.html">Vissza</a></p>
-        <nav>
-          <ul>
-            <li><a href="ieta27alkbizt.html">Informatikai biztonság</a></li>
-            <li><a href="#" id="aktiv">Hálózati biztonság</a></li>
-            <li><a href="pchiba.html">Számítógépes hibaelhárítás</a></li>
-            <li><a href="kript.html">Kriptográfia</a></li>
-          </ul>
-        </nav>
+        <p><a href="javascript:history.back()">Vissza</a></p>
       </aside>
       <section>
         <h1>Hálózati biztonság</h1>
