--- a/1-italapok/elm.html
+++ b/1-italapok/elm.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Számítógép-architektúrák</title>
+    <title>Számítógép-tudomány</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">Számítógép-architektúrák</h1>
+      <h1 class="italapok">Számítógép-tudomány</h1>
     </header>
 
     <main>
@@ -27,6 +27,7 @@
           <ul>
             <li><a href="1-szgtud.html">Bevezetés</a></li>
             <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="kript.html">Kriptográfia</a></li>
             <li><a href="binary.html">Számrendszerek</a></li>
             <li><a href="nummat.html">Numerikus matematika I.</a></li>
             <li><a href="r.html">Numerikus programozás</a></li>
