--- a/1-italapok/kript.html
+++ b/1-italapok/kript.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Kriptográfia</title>
+    <title>Számítógép-tudomány</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Kriptográfia</h1>
+      <h1 class="network">Számítógép-tudomány</h1>
     </header>
 
     <main>
@@ -25,10 +25,13 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="ieta27alkbizt.html">Informatikai biztonság</a></li>
-            <li><a href="bizt.html">Hálózati biztonság</a></li>
-            <li><a href="pchiba.html">Számítógépes hibaelhárítás</a></li>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
+            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
             <li><a href="#" id="aktiv">Kriptográfia</a></li>
+            <li><a href="binary.html">Számrendszerek</a></li>
+            <li><a href="nummat.html">Numerikus matematika I.</a></li>
+            <li><a href="r.html">Numerikus programozás</a></li>
+            <li><a href="elm.html">Számítógép-architektúrák</a></li>
           </ul>
         </nav>
       </aside>
