--- a/5-haloanyagok/bizt.html
+++ b/5-haloanyagok/bizt.html
@@ -22,7 +22,23 @@
 
     <main>
       <aside>
-        <p><a href="javascript:history.back()">Vissza</a></p>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="#" id="aktiv">Hálózati biztonság</a></li>
+            <li><a href="../ptthalo/ieta27.html">Iéta2 - 7. IT-biztonság</a></li>
+          </ul>
+        </nav>
+        <p>#szerver</p>
+        <p>#monitoring</p>
+        <p>#naplózás</p>
+        <p>#biztonsági mentés</p>
+        <p>#rendszerfrissítés</p>
+        <p>#felügyelet</p>
+        <p>#automatizálás</p>
+        <p>#hibaelhárítás</p>
+        <p>#távoli hozzáférés</p>
+        <p>#felhasználói fiókok</p>
       </aside>
       <section>
         <h1>Hálózati biztonság</h1>
