--- a/ptthalo/ieta21.html
+++ b/ptthalo/ieta21.html
@@ -29,9 +29,9 @@
             <li><a href="ieta24.html">Iéta2 - 4</a></li>
             <li><a href="ieta25.html">Iéta2 - 5</a></li>
             <li><a href="ieta26.html">Iéta2 - 6</a></li>
-            <li><a href="ieta27.html">Iéta2 - 7</a></li>
             <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
+        </nav>
       </aside>
       <section>
         <h1>Informatikai és távközlési hálózatok napjainkban</h1>
