--- a/ptthalo/ieta27.html
+++ b/ptthalo/ieta27.html
@@ -23,25 +23,10 @@
         <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="ieta21.html">Iéta2 - 1</a></li>
-            <li><a href="ieta22.html">Iéta2 - 2</a></li>
-            <li><a href="ieta23.html">Iéta2 - 3</a></li>
-            <li><a href="ieta24.html">Iéta2 - 4</a></li>
-            <li><a href="ieta25.html">Iéta2 - 5</a></li>
-            <li><a href="ieta26.html">Iéta2 - 6</a></li>
-            <li><a href="#" id="aktiv">Iéta2 - 7</a></li>
-            <li><a href="ieta18.html">Iéta1 - 8</a></li>
+            <li><a href="../5-haloanyagok/bizt.html">Hálózati biztonság</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 7. IT-biztonság</a></li>
           </ul>
-        <p>#szerver</p>
-        <p>#monitoring</p>
-        <p>#naplózás</p>
-        <p>#biztonsági mentés</p>
-        <p>#rendszerfrissítés</p>
-        <p>#felügyelet</p>
-        <p>#automatizálás</p>
-        <p>#hibaelhárítás</p>
-        <p>#távoli hozzáférés</p>
-        <p>#felhasználói fiókok</p>
+        </nav>
       </aside>
       <section>
         <h1>IT-biztonság</h1>
