--- a/ptthalo/ieta24.html
+++ b/ptthalo/ieta24.html
@@ -29,9 +29,9 @@
             <li><a href="#" id="aktiv">Iéta2 - 4</a></li>
             <li><a href="ieta25.html">Iéta2 - 5</a></li>
             <li><a href="ieta26.html">Iéta2 - 6</a></li>
-            <li><a href="ieta27.html">Iéta2 - 7</a></li>
             <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
+        </nav>
       </aside>
       <section>
         <h1>A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</h1>
