--- a/5-haloanyagok/bizt.html
+++ b/5-haloanyagok/bizt.html
@@ -26,7 +26,7 @@
         <nav>
           <ul>
             <li><a href="#" id="aktiv">Hálózati biztonság</a></li>
-            <li><a href="../ptthalo/ieta27.html">Iéta2 - 7. IT-biztonság</a></li>
+            <li><a href="alkbizt.html">Alkalmazások biztonsága</a></li>
           </ul>
         </nav>
         <p>#szerver</p>
