--- a/ptthalo/ieta27.html
+++ b/ptthalo/ieta27.html
@@ -23,8 +23,14 @@
         <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="../5-haloanyagok/bizt.html">Hálózati biztonság</a></li>
-            <li><a href="#" id="aktiv">Iéta2 - 7. IT-biztonság</a></li>
+            <li><a href="ieta21.html">Iéta2 - 1</a></li>
+            <li><a href="ieta22.html">Iéta2 - 2</a></li>
+            <li><a href="ieta23.html">Iéta2 - 3</a></li>
+            <li><a href="ieta24.html">Iéta2 - 4</a></li>
+            <li><a href="ieta25.html">Iéta2 - 5</a></li>
+            <li><a href="ieta26.html">Iéta2 - 6</a></li>
+            <li><a href="#" id="aktiv">Iéta2 - 7</a></li>
+            <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
         </nav>
       </aside>
@@ -51,54 +57,6 @@
           <li>Képes a firmware frissítésére SOHO forgalomirányítókon.</li>
           <li>Képes port-továbbítás beállítására SOHO routeren.</li>
         </ul>
-
-        <h1>Alkalmazások biztonsága</h1>
-
-        <h3>Vírusok, vírusirtók</h3>
-        <p><a href="https://drive.google.com/file/d/1WI0Ewt5oNcaG4Gr2NNaVs9XgTQK4_P5D/view?usp=sharing" target=_blank>Vírusvédelem</a></p>
-        <p><a href="https://drive.google.com/file/d/1riQ-DMvFKjAl0CcZgXUffys7f4l5VsxB/view?usp=sharing" target=_blank>Pethő Attila: Rosszindulatú programok</a></p>
-        <p><a href="https://drive.google.com/file/d/1l2matv8Nvoc55Ts67HbopKXTnmibXLOf/view?usp=sharing" target=_blank>Pethő Attila: Rosszindulatú programok 2</a></p>
-        <p><a href="https://drive.google.com/file/d/1iuECT5yL0LKLh0ZpXT9cOBeHmV6PGCWJ/view?usp=sharing" target=_blank>Rosszindulatú programok, vírusok, vírusirtók</a></p>
-        <p><a href="https://drive.google.com/file/d/18NQr6xfuTwvCWKhkkLZS7XqAwx4Fhzxz/view?usp=sharing" target=_blank>Vírusok prezentáció</a></p>
-
-        <h3>Tűzfalak</h3>
-        <p><a href="https://www.youtube.com/watch?v=kDEX1HXybrU" target=_blank>PowerCert: Firewall explained</a></p>
-        <p><a href="https://www.youtube.com/watch?v=dqlzQXo1wqo" target=_blank>PowerCert: What is DMZ?</a></p>
-        <p><a href="https://drive.google.com/file/d/1H8RVsQPae4AdVURQ4rIiyt3dH_h3Skln/view?usp=sharing" target=_blank>Filtering in Firewall</a></p>
-        <p><a href="https://drive.google.com/file/d/1WuhJZwNC0dJNrc3P403ofkKq2flohVhe/view?usp=sharing" target=_blank>Kónya Kinga: Tűzfalak</a></p>
-        <p><a href="https://drive.google.com/file/d/1-TAJL8vu3fEjzG8gABUb8RDv3zNc1pkn/view?usp=sharing" target=_blank>Deák Kristóf: Tűzfal</a></p>
-        <p><a href="https://drive.google.com/file/d/1C8m2WyZOSCs502HKnWCz026F2WsDRpsv/view?usp=sharing" target=_blank>Tűzfal (firewall)</a></p>
-        <p><a href="https://drive.google.com/file/d/1TDu1gbRKTxOZiupep9yOGov5YEdulHjr/view?usp=sharing" target=_blank>Windows 7 Firewall</a></p>
-
-        <h3>Támadások, védekezés</h3>
-        <p><a href="https://www.youtube.com/watch?v=ilhGh9CEIwM" target=_blank>PowerCert: DDoS attack explained</a></p>
-        <p><a href="https://drive.google.com/file/d/1Z7d-Lp6Pd0QHGGUEAAhzbWsSaJr-uRWp/view?usp=sharing" target=_blank>Póserné Oláh Valéria: Számítógép-hálózati támadások</a></p>
-
-        <h3>AAA</h3>
-        <p>Radius-szerver</p>
-        <p>Tacacs-szerver</p>
-        
-        <h3>Snort</h3>
-        <h3>WireShark</h3>
-
-        <h3>ping</h3>
-        <p><a href="https://www.youtube.com/watch?v=IIicPE38O-s" target=_blank>PowerCert: Ping command - troubleshooting</a></p>
-        <p><a href="https://www.youtube.com/watch?v=vJV-GBZ6PeM" target=_blank>PowerCert: Ping and Traceroute</a></p>
-        <h3>ipconfig</h3>
-        <h3>tracert</h3>
-        <p><a href="https://www.youtube.com/watch?v=up3bcBLZS74" target=_blank>PowerCert: Traceroute (tracert) explained</a></p>
-        <h3>netstat</h3>
-        <h3>ICMP</h3>
-
-        <h3>SNMP</h3>
-        <p><a href="https://www.youtube.com/watch?v=Lq7j-QipNrI" target=_blank>CertBros: SNMP explained</a></p>
-        <p><a href="https://drive.google.com/file/d/1ldrYks09cBUemG-QeU1WUMixPiHtnUQ3/view?usp=sharing" target=_blank>SNMP and logging</a></p>
-
-        <h3>syslog</h3>
-        <p><a href="https://www.youtube.com/watch?v=BMVHHX02T4Q" target=_blank>CertBros: Syslog explained</a></p>
-
-        <h3>Network Time Protocol</h3>
-        <p><a href="https://www.youtube.com/watch?v=oCtkwEjhyD4" target=_blank>CertBros: NTP explained</a></p>
       </section>
     </main>
     <footer>
