--- a/ptthalo/ieta26.html
+++ b/ptthalo/ieta26.html
@@ -29,6 +29,7 @@
             <li><a href="ieta24.html">Iéta2 - 4</a></li>
             <li><a href="ieta25.html">Iéta2 - 5</a></li>
             <li><a href="#" id="aktiv">Iéta2 - 6</a></li>
+            <li><a href="ieta27.html">Iéta2 - 7</a></li>
             <li><a href="ieta18.html">Iéta1 - 8</a></li>
           </ul>
         </nav>
