--- a/2-pc/pc.html
+++ b/2-pc/pc.html
@@ -28,6 +28,7 @@
             <li><a href="karbhiba.html">Megelőző karbantartás és hibakeresés</a></li>
             <li><a href="laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés</a></li>
             <li><a href="nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
