--- a/4-elektronika/dron.html
+++ b/4-elektronika/dron.html
@@ -29,6 +29,7 @@
             <li><a href="robotika.html">Robotika</a></li>
             <li><a href="#" id="aktiv">Drónok</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
