--- a/8-hor/ubuntuserver.html
+++ b/8-hor/ubuntuserver.html
@@ -26,13 +26,12 @@
         <nav>
           <ul>
             <li><a href="hor.html">Bevezetés</a></li>
-            <li><a href="ieta25.html">A szállítási és az alkalmazási réteg</a></li>
-            <li><a href="halo24.html">Statikus és dinamikus címfordítás lehetőségei</a></li>
             <li><a href="windowsserver.html">Windows Server</a></li>
             <li><a href="#" id="aktiv">Ubuntu Server</a></li>
             <li><a href="winlinint.html">Windows és Linux integrációja</a></li>
             <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
