--- a/1-italapok/1-szgtud.html
+++ b/1-italapok/1-szgtud.html
@@ -32,6 +32,7 @@
             <li><a href="nummat.html">Numerikus matematika I.</a></li>
             <li><a href="r.html">Numerikus programozás</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
         <p>#processzor</p>
