--- a/1-italapok/r.html
+++ b/1-italapok/r.html
@@ -32,6 +32,7 @@
             <li><a href="nummat.html">Numerikus matematika I.</a></li>
             <li><a href="#" id="aktiv">Numerikus programozás</a></li>
             <li><a href="elm.html">Számítógép-architektúrák</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
