--- a/3-rendszer/windows.html
+++ b/3-rendszer/windows.html
@@ -33,6 +33,7 @@
             <li><a href="android.html">Android</a></li>
             <li><a href="unix.html">Unix</a></li>
             <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
