--- a/6-halobizt/alkbizt.html
+++ b/6-halobizt/alkbizt.html
@@ -27,6 +27,8 @@
           <ul>
             <li><a href="bizt.html">Hálózati biztonság</a></li>
             <li><a href="#" id="aktiv">Alkalmazások biztonsága</a></li>
+            <li><a href="proj1.html">Projektmunka I.</a></li>
+            <li><a href="proj2.html">Projektmunka II.</a></li>
           </ul>
         </nav>
         <p>#szerver</p>
