--- a/beginhalo.html
+++ b/beginhalo.html
@@ -64,7 +64,7 @@
         </article>
       </a>
 
-      <a href="5-haloanyagok/bizt.html">
+      <a href="6-halobizt/bizt.html">
         <img src="5-haloanyagok/computer-1591018_1280.jpg" alt="globe-8704013_1280-169">
         <article>
           <h3>Hálózati biztonság</h3>
