--- a/5-haloanyagok/haloosi4.html
+++ b/5-haloanyagok/haloosi4.html
@@ -27,6 +27,7 @@
           <ul>
             <li><a href="bevhalo.html">Bevezetés</a></li>
             <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="projektek.html">Projektek OSI 1-2</a></li>
             <li><a href="haloosi3.html">Hálózati réteg</a></li>
             <li><a href="#" id="aktiv">Szállítási réteg</a></li>
             <li><a href="web.html">Világháló</a></li>
