--- a/beginhalo.html
+++ b/beginhalo.html
@@ -64,6 +64,14 @@
         </article>
       </a>
 
+      <a href="5-haloprogiot/hpiot1.html">
+        <img src="5-haloprogiot/communication-1439132_1280-169.jpg" alt="communication-1439132_1280-169">
+        <article>
+          <h3>Hálózat programozása és IoT</h3>
+          <p></p>
+        </article>
+      </a>
+
       <a href="6-halobizt/bizt.html">
         <img src="5-haloanyagok/computer-1591018_1280.jpg" alt="globe-8704013_1280-169">
         <article>
