--- a/5-haloprogiot/hpiot1.html
+++ b/5-haloprogiot/hpiot1.html
@@ -31,7 +31,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Programozási alapok Pythonban</h1>
+        <h3>Programozási alapok Pythonban (4+16 óra)</h3>
 
         <p>A témakör célja, hogy a tanulók felfrissítsék és kibővítsék a szakmai alapozás során a Programozási alapok tantárgy keretében megszerzett programozási ismereteiket és a Python nyelvben szerzett gyakorlati készségeiket. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
