--- a/5-haloprogiot/hpiot2.html
+++ b/5-haloprogiot/hpiot2.html
@@ -31,7 +31,7 @@
         </nav>
       </aside>
       <section>
-        <h1>REST API kliensprogram készítése Pythonban</h1>
+        <h1>REST API kliensprogram készítése Pythonban (4+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a REST API architektúrát, és képesek legyenek egyszerű REST API kliens készítésére Pythonban, valamint a JSON-fájlok kezelésére, feldolgozására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
