--- a/5-haloprogiot/hpiot3.html
+++ b/5-haloprogiot/hpiot3.html
@@ -31,7 +31,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózatok programozása</h1>
+        <h1>Hálózatok programozása (4+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók betekintést nyerjenek, illetve alapszintű gyakorlatot szerezzenek a hálózatok programozása területén. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
