--- a/5-haloprogiot/hpiot4.html
+++ b/5-haloprogiot/hpiot4.html
@@ -31,7 +31,7 @@
         </nav>
       </aside>
       <section>
-        <h1>IoT - a dolgok internete</h1>
+        <h1>IoT - a dolgok internete (4+24 óra)</h1>
 
         <p>A témakör célja, hogy betekintést adjon a dolgok internetének világába, valamint képessé tegye a tanulókat IoT-megvalósítások prototípusainak létrehozására, IoT-eszközök programozott beállítására szimulációs és valós eszközökkel (pl. Arduino, Rasberry Pi) egyaránt. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
