--- a/2-pc/bevezetes.html
+++ b/2-pc/bevezetes.html
@@ -11,8 +11,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
@@ -25,11 +23,13 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="szamtechtortenet.html" id="aktiv">A számítástechnika története</a></li>
+            <li><a href="#" id="aktiv">Bevezetés</a></li>
+            <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="pc.html">A PC részei, PC szét- és összeszerelése, bővítése</a></li>
             <li><a href="karbhiba.html">Megelőző karbantartás és hibakeresés</a></li>
             <li><a href="laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés</a></li>
             <li><a href="nyomtatok.html">Nyomtatók és egyéb perifériák</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
