--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div>
           <h3>Személyi számítógép</h3>
           <p>A személyi számítógép (PC) egy olyan multifunkcionális elektronikai eszköz, amelyet egyetlen felhasználó számára terveztek, és amely otthoni, irodai és iskolai környezetben egyaránt használható. A PC-k lehetővé teszik a felhasználók számára a különféle szoftverek futtatását, mint például a szövegszerkesztők, táblázatkezelők, grafikai programok és játékok, valamint az internethez való hozzáférést. Az egyszerű kezelhetőség, a széleskörű alkalmazási lehetőségek és a folyamatos technológiai fejlődés tette a személyi számítógépet a modern élet nélkülözhetetlen eszközévé, amely támogatja a munkavégzést, a tanulást és a szórakozást.</p>
-          <button><a href="2-pc/2-pc.html">Tovább</a></button>
+          <button><a href="2-pc/bevezetes.html">Tovább</a></button>
         </div>
         <img src="static/laptop-5673901_1920-169.jpg" alt="laptop-5673901_1920-169">
       </section>
