--- a/2-pc/pc.html
+++ b/2-pc/pc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>A PC részei, PC szét- és összeszerelése, bővítése</title>
+    <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">A PC részei, PC szét- és összeszerelése, bővítése</h1>
+      <h1 class="italapok">Személyi számítógép</h1>
     </header>
 
     <main>
@@ -23,6 +23,7 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
+            <li><a href="bevezetes.html">Bevezetés</a></li>
             <li><a href="szamtechtortenet.html">A számítástechnika története</a></li>
             <li><a href="#" id="aktiv">A PC részei, PC szét- és összeszerelése, bővítése</a></li>
             <li><a href="karbhiba.html">Megelőző karbantartás és hibakeresés</a></li>
@@ -33,8 +34,6 @@
         </nav>
       </aside>
       <section>
-        
-
         <h1>A PC részei, PC szét- és összeszerelése, bővítése (2+10 óra)</h1>
 
         <p>A témakörben a tanulók áttekintik a számítógépek és mobileszközök, főbb perifériák és adathordozók felépítését. A témakör elsajátítása után a tanuló:</p>
