--- a/2-pc/szamtechtortenet.html
+++ b/2-pc/szamtechtortenet.html
@@ -5,19 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>A számítástechnika története</title>
+    <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">A számítástechnika története</h1>
+      <h1 class="italapok">Személyi számítógép</h1>
     </header>
 
     <main>
@@ -25,7 +23,8 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="szamtechtortenet.html" id="aktiv">A számítástechnika története</a></li>
+            <li><a href="bevezetes.html">Bevezetés</a></li>
+            <li><a href="#" id="aktiv">A számítástechnika története</a></li>
             <li><a href="pc.html">A PC részei, PC szét- és összeszerelése, bővítése</a></li>
             <li><a href="karbhiba.html">Megelőző karbantartás és hibakeresés</a></li>
             <li><a href="laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés</a></li>
@@ -35,8 +34,6 @@
         </nav>
       </aside>
       <section>
-        
-
         <h1>A számítástechnika története</h1>
 
         <p>Mechanikus számítógépek (Charles Babbage, Analytical Engine, Difference Engine)</p>
