--- a/5-haloanyagok/haloptt.html
+++ b/5-haloanyagok/haloptt.html
@@ -85,6 +85,14 @@
             <li><a href="../ptthalo/halo29.html">Hálózatvirtualizáció, hálózatautomatizáció (5+19 óra)</a></li>
             <li><a href="../ptthalo/halo210.html">Komplex hálózat tervezése, kialakítása (8+20 óra)</a></li>
           </ol>
+
+          <h3>Hálózat programozása és IoT (13)</h3>
+          <ol>
+            <li><a href="../5-haloprogiot/hpiot1.html">Programozási alapok Pythonban (4+16 óra)</a></li>
+            <li><a href="../5-haloprogiot/hpiot2.html">REST API kliensprogram készítése Pythonban (4+26 óra)</a></li>
+            <li><a href="../5-haloprogiot/hpiot3.html">Hálózatok programozása (4+26 óra)</a></li>
+            <li><a href="../5-haloprogiot/hpiot4.html">IoT - a dolgok internete (4+24 óra)</a></li>
+          </ol>
       </section>
     </main>
     <footer>
