--- a/ptthalo/halo11.html
+++ b/ptthalo/halo11.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózati eszközök alapszintű konfigurációja</h1>
+        <h1>Hálózati eszközök alapszintű konfigurációja (5+11 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók képesek legyenek hálózati eszközökkel sávon kívüli és sávon belüli kapcsolatot létesíteni, és kapcsolók, illetve forgalomirányítók alapszintű konfigurációját elvégezni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
