--- a/ptthalo/halo14.html
+++ b/ptthalo/halo14.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Második rétegbeli redundancia</h1>
+        <h1>Második rétegbeli redundancia (7+15 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók felismerjék az első és második rétegben a redundancia szükségességét, és tisztában legyenek a redundancia okozta problémákkal. Ismerjék meg a feszítőfa-protokoll szerepét, és legyenek képesek feszítőfa-protokoll használatára, konfigurálására. A tanulók értsék meg a portösszevonás működését, és legyenek képesek kapcsolók közötti portösszevonás konfigurálására, hibaelhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
