--- a/ptthalo/halo19.html
+++ b/ptthalo/halo19.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Vezeték nélküli technológiák</h1>
+        <h1>Vezeték nélküli technológiák (10+27 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a vezeték nélküli szabványokat, a WLAN topológiákat és a WLAN-ok működését. A tanulók legyenek képesek vezeték nélküli hálózat kialakítására kis- és nagyvállalati környezetben. A tanulók legyenek tisztában a leggyakoribb biztonsági problémákkal, támadási módszerekkel, és tanulják meg, hogyan lehet ellenük védekezni, azokat megelőzni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
