--- a/ptthalo/halo210.html
+++ b/ptthalo/halo210.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Komplex hálózat tervezése, kialakítása</h1>
+        <h1>Komplex hálózat tervezése, kialakítása (8+20 óra)</h1>
         <p>A témakör tanításának célja, hogy a tanulók képesek legyenek egy nagyobb és összetettebb hálózatot tervezni, megvalósítani és konfigurálni úgy, hogy a hálózatban egy eszköz vagy kapcsolat meghibásodása a legkisebb kiesést okozza. A tanulók eddigi ismereteik alapján végezzék el egy komplex hálózat tervezését, dokumentálását, majd szimulációs szoftverben a hálózat működésének tesztelését. A tanulók végül fizikai eszközök használatával valósítsák meg a tervezett hálózatot. A témakör tanítása során csoportos projektmunka javasolt.</p>
       </section>
     </main>
