--- a/ptthalo/halo22.html
+++ b/ptthalo/halo22.html
@@ -39,7 +39,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózatbiztonság</h1>
+        <h1>Hálózatbiztonság (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék hálózatbiztonság fontosságát. Tisztában legyenek a támadási technikákkal, és képesek legyenek ezek lehetőség szerinti megelőzésére, kivédésére. A tanulók ismerjék meg a központi hitelesítés szerepét, használatának lehetőségeit, és legyenek képesek RADIUS-hitelesítés megvalósítására. A tanulók ismerjék meg a kriptográfia alapjait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
