--- a/ptthalo/halo110.html
+++ b/ptthalo/halo110.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Forgalomirányítási alapok, statikus forgalomirányítás</h1>
+        <h1>Forgalomirányítási alapok, statikus forgalomirányítás (5+35 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók szerezzenek forgalomirányítási alapismereteket, tudják értelmezni az irányítótábla bejegyzéseit IPv4- és IPv6-környezetben. A tanulók ismerjék meg a statikus forgalomirányítás lehetőségeit, működését, és legyenek képesek kisebb hálózatban statikus forgalomirányítást konfigurálni. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
