--- a/ptthalo/halo12.html
+++ b/ptthalo/halo12.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Kapcsolási alapok</h1>
+        <h1>Kapcsolási alapok (3+7 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a kapcsoló működését, a kapcsolási módokat. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
