--- a/ptthalo/halo13.html
+++ b/ptthalo/halo13.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>VLAN-ok használata, VLAN-ok közti forgalomirányítás</h1>
+        <h1>VLAN-ok használata, VLAN-ok közti forgalomirányítás (13+31 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék meg a VLAN-ok szerepét, legyenek képesek VLAN-ok kialakítására, és legyenek tisztában a trönk kapcsolatok szerepével. A tanulók ismerkedjenek meg a VLAN-ok közti forgalomirányítás lehetőségeivel, és legyenek képesek VLAN-ok közti forgalomirányítást megvalósítani. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
