--- a/ptthalo/halo15.html
+++ b/ptthalo/halo15.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Dinamikus címkiosztás IPv4-környezetben</h1>
+        <h1>Dinamikus címkiosztás IPv4-környezetben (8+18 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerkedjenek a dinamikus címkiosztással IPv4- környezetben. A tanulók legyenek képesek DHCPv4-kiszolgáló konfigurálására forgalomirányítón. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
