--- a/ptthalo/halo16.html
+++ b/ptthalo/halo16.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben</h1>
+        <h1>IPv6-os címzés és dinamikus címkiosztás IPv6-környezetben (0+44 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék az IPv6-cím szerepét, szerkezetét, tisztában legyenek használatának szükségességével. A tanulók ismerjék meg az IPv6-címek típusait, és legyenek képesek IPv6-os címzés használatára forgalomirányítókon és végberendezéseken. A tanulók értsék meg a címmeghatározó protokoll szerepét IPv6-környezetben. A tanulók ismerkedjenek meg a dinamikus címkiosztás lehetőségeivel IPv6-környezetben. A tanulók legyenek képesek SLAAC használatára és DHCPv6-kiszolgáló konfigurálására forgalomirányítón. A tanulók ismerjék fel a dinamikus címkiosztás során felmerülő tipikus hibákat, és legyenek képesek azok elhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
