--- a/ptthalo/halo17.html
+++ b/ptthalo/halo17.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Harmadik rétegbeli redundancia</h1>
+        <h1>Harmadik rétegbeli redundancia (6+35 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók felismerjék a harmadik rétegben a redundancia szükségességét, és tisztában legyenek a redundancia okozta problémákkal. A tanulók tudjanak harmadik rétegbeli redundanciát tervezni, és megvalósítani FHRP protokoll konfigurálásával. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
