--- a/ptthalo/halo18.html
+++ b/ptthalo/halo18.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózatbiztonság, a kapcsoló biztonságossá tétele</h1>
+        <h1>Hálózatbiztonság, a kapcsoló biztonságossá tétele (10+27 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a leggyakoribb biztonsági problémákat és támadási típusokat LAN-környezetben, és megtanulják, hogyan lehet ellenük védekezni, illetve megelőzni őket.</p>
         <p>A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
