--- a/ptthalo/halo21.html
+++ b/ptthalo/halo21.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Dinamikus forgalomirányítási ismeretek</h1>
+        <h1>Dinamikus forgalomirányítási ismeretek (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a dinamikus belső forgalomirányítás lehetőségeit, a forgalomirányító protokollok működését, és megértsék a forgalomirányító protokollok közt lévő különbségeket. Képesek legyenek a hálózat méreteinek megfelelő forgalomirányítás megtervezésére, a protokoll kiválasztására, konfigurálására, hibaelhárítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
