--- a/ptthalo/halo23.html
+++ b/ptthalo/halo23.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hozzáférési listák használata</h1>
+        <h1>Hozzáférési listák használata (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a forgalomszűrés jelentőségét, és legyenek képesek forgalomszűrést megvalósítani IPv4-környezetben. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
