--- a/ptthalo/halo24.html
+++ b/ptthalo/halo24.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Statikus és dinamikus címfordítás lehetőségei</h1>
+        <h1>Statikus és dinamikus címfordítás lehetőségei (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megértsék a címfordítás szükségességét, típusait, és legyenek képesek statikus és dinamikus címfordítás megvalósítására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
