--- a/ptthalo/halo25.html
+++ b/ptthalo/halo25.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>WAN-technológiák</h1>
+        <h1>WAN-technológiák (5+20 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók ismerjék a WAN-hálózatokra fókuszálva a technológiák, a hálózatokban szükséges eszközök és alkalmazások telepítésének, üzemeltetésének elméleti alapjait és gyakorlati megvalósításait. A tanulók ismerjék meg a WAN-ok esetén használt második rétegbeli protokollokat, és ismerjék meg a WAN-okban használt forgalomirányítás alapjait és gyakorlati megvalósítását. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
