--- a/ptthalo/halo26.html
+++ b/ptthalo/halo26.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Virtuális magánhálózat (VPN) kialakítása</h1>
+        <h1>Virtuális magánhálózat (VPN) kialakítása (15+30 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a virtuális magánhálózat (VPN) működését, használatának előnyeit és fajtáit. A tanulók legyenek képesek Site-to-site és Remote-access VPN konfigurálására. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
