--- a/ptthalo/halo27.html
+++ b/ptthalo/halo27.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása</h1>
+        <h1>Minőségbiztosítási alapok, hálózatfelügyelet megvalósítása (15+26 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók alapszintű ismereteket szerezzenek a minőségbiztosítás területén, elsajátítsák a hálózatmonitorozás és a hálózatfelügyelet elméleti alapjait és gyakorlati megvalósításait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
