--- a/ptthalo/halo28.html
+++ b/ptthalo/halo28.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózattervezés, hibaelhárítás</h1>
+        <h1>Hálózattervezés, hibaelhárítás (5+18 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók elsajátítsák a hálózattervezés és a hálózati hibaelhárítás elméleti alapjait és gyakorlati megvalósításait. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
