--- a/ptthalo/halo29.html
+++ b/ptthalo/halo29.html
@@ -37,7 +37,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózatvirtualizáció, hálózatautomatizáció</h1>
+        <h1>Hálózatvirtualizáció, hálózatautomatizáció (5+19 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a hálózatvirtualizáció és -automatizáció alapjait, előnyeit. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
         <ul>
