--- a/4-elektronika/elektr.html
+++ b/4-elektronika/elektr.html
@@ -34,6 +34,8 @@
         </nav>
       </aside>
       <section>
+        <h1>Elektronika</h1>
+
         <p>Tartalom</p>
         <ul id="t">
           <li><a href="#ptt">Programtanterv</a></li>
