--- a/4-elektronika/okostelefon.html
+++ b/4-elektronika/okostelefon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Okoseszközök</title>
+    <title>Elektronika</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="ai">Okoseszközök</h1>
+      <h1 class="ai">Elektronika</h1>
     </header>
 
     <main>
@@ -34,6 +34,8 @@
         </nav>
       </aside>
       <section>
+        <h1>Okoseszközök</h1>
+
         <p>Tartalom</p>
         <ul id="t">
           <li><a href="#okost">Okostelefonok</a></li>
