--- a/office/office.html
+++ b/office/office.html
@@ -46,9 +46,9 @@
       </aside>
       <section>
         <h1>Programtanterv</h1>
-        <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-        <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-        <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
+        <p><a href="kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
+        <p><a href="ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
+        <p><a href="kttint.html">Irodai szoftverek integrált használata</a></p>
 
         <h1>ECDL vizsgafeladatok</h1>
         <p><a href="https://njszt.hu/hu/icdl/modul/szovegszerkesztes" target="_blank">ECDL Szövegszerkesztés modul</a></p>
