--- a/office/prezi.html
+++ b/office/prezi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Prezentációkészítés</title>
+    <title>Irodai szoftverek</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">Prezentációkészítés</h1>
+      <h1 class="italapok">Irodai szoftverek</h1>
     </header>
 
     <main>
