--- a/5-haloprogiot/hpiot4.html
+++ b/5-haloprogiot/hpiot4.html
@@ -42,6 +42,12 @@
           <li>Képes Python program segítségével befolyásolni az IoT-eszközök viselkedését.</li>
           <li>Képes Python program segítségével az IoT-eszközöket felhőszolgáltatásokhoz kapcsolni API-kon keresztül.</li>
         </ul>
+
+        <h3>Szenzorhálózatok és a tárgyak internete</h3>
+        <p>Intelligens szenzorok és szenzorhálózatok és az Internet of Things kapcsolata. Intelligens szenzor hardver-architektúrák. Szenzorhálózati architektúrák. Szabványosítási törekvések: IEEE 802.15.4., ZigBee protokoll, Bluetooth LE. Tipikus szenzorhálózati alkalmazási területek, esettanulmányok (egészségügy, mérnöki alkalmazások, környezetvédelem, intelligens otthon, stb.).</p>
+    
+        <h3>edureka! - Internet of Things - IoT Tutorial for Beginners | Edureka</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PL9ooVrP1hQOGccfBbP5tJWZ1hv5sIUWJl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
       </section>
     </main>
     <footer>
