--- a/beginhalo.html
+++ b/beginhalo.html
@@ -40,6 +40,24 @@
         </article>
       </a>
 
+      <a href="osi/fizikai.html">
+        <img src="static/fiber-4814456_1280-169.jpg" alt="fiber-4814456_1280-169">
+        <article>
+          <h3>Az OSI-modell alsó rétegei</h3>
+        </article>
+      </a>
+
+      <a href="osialk/bev.html">
+        <img src="osialk/google-76517_1280.png" alt="google-76517_1280">
+        <article>
+          <h3>Az OSI-modell felső rétegei</h3>
+        </article>
+      </a>
+    </div>
+
+    <h1>Tantárgyak</h1>
+
+    <div id="alkezdo">
       <a href="ptthalo/ieta21.html">
         <img src="5-haloanyagok/rj-45-3137487_1280-2.png" alt="rj-45-3137487_1280-2">
         <article>
