--- a/osi/projektek.html
+++ b/osi/projektek.html
@@ -25,16 +25,20 @@
         <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
+            <li><a href="fizikai.html">Fizikai réteg</a></li>
+            <li><a href="adatkapcs.html">Adatkapcsolati réteg</a></li>
+            <li><a href="kabelek.html">Kábelek</a></li>
+            <li><a href="switch.html">Switch (kapcsoló)</a></li>
+            <li><a href="wireless.html">Vezeték nélküli</a></li>
             <li><a href="#" id="aktiv">Projektek OSI 1-2</a></li>
-            <li><a href="haloosi3.html">Hálózati réteg</a></li>
-            <li><a href="haloosi4.html">Szállítási réteg</a></li>
-            <li><a href="web.html">Világháló</a></li>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
-            <li><a href="PT.html">Packet Tracer</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+            <li><a href="IPv4.html">IPv4</a></li>
+            <li><a href="IPv6.html">IPv6</a></li>
+            <li><a href="tartcimt.html">Tartomány, címtár</a></li>
+            <li><a href="halozatok.html">Hálózatok kategóriái</a></li>
+            <li><a href="komm.html">Kommunikáció 1.</a></li>
+            <li><a href="router.html">Routerek</a></li>
+            <li><a href="vlan.html">VLAN</a></li>
+            <li><a href="routerutv.html">Router-útvonalak</a></li>
           </ul>
         </nav>
       </aside>
