--- a/osi/switch.html
+++ b/osi/switch.html
@@ -22,7 +22,25 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="fizikai.html">Fizikai réteg</a></li>
+            <li><a href="adatkapcs.html">Adatkapcsolati réteg</a></li>
+            <li><a href="kabelek.html">Kábelek</a></li>
+            <li><a href="#" id="aktiv">Switch (kapcsoló)</a></li>
+            <li><a href="wireless.html">Vezeték nélküli</a></li>
+            <li><a href="projektek.html">Projektek OSI 1-2</a></li>
+            <li><a href="IPv4.html">IPv4</a></li>
+            <li><a href="IPv6.html">IPv6</a></li>
+            <li><a href="tartcimt.html">Tartomány, címtár</a></li>
+            <li><a href="halozatok.html">Hálózatok kategóriái</a></li>
+            <li><a href="komm.html">Kommunikáció 1.</a></li>
+            <li><a href="router.html">Routerek</a></li>
+            <li><a href="vlan.html">VLAN</a></li>
+            <li><a href="routerutv.html">Router-útvonalak</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Switch (kapcsoló)</h1>
