--- a/osialk/streamvideo.html
+++ b/osialk/streamvideo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>IPv6</title>
+    <title>Az OSI-modell felső rétegei</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,26 +17,37 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">IPv6</h1>
+      <h1 class="network">Az OSI-modell felső rétegei</h1>
     </header>
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="bev.html">Bevezetés</a></li>
+            <li><a href="szall.html">A szállítási réteg</a></li>
+            <li><a href="web.html">A világháló</a></li>
+            <li><a href="email.html">E-mail</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="fajl.html">Fájl</a></li>
+            <li><a href="streamhang.html">Hangstream</a></li>
+            <li><a href="#" id="aktiv">Videostream</a></li>
+            <li><a href="print.html">Nyomtatás és fax</a></li>
+            <li><a href="hirek.html">Hírek</a></li>
+            <li><a href="taveler.html">Távoli elérés</a></li>
+            <li><a href="abserver.html">Adatbázis-szerver</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
-        <h1>IPv6</h1>
-
-        <h3>CertBros: IPv6 addresses explained</h3>
-        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/irhS0ASkvy8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
-    
-        <h3>Alhálózati maszk</h3>
-        <h3>Hálózat létrehozása</h3>
-        <h3>Osztályok</h3>
-        <h3>Nyilvános és privát címek</h3>
-        <h3>DHCPv4</h3>
-        <h3>Alhálózatok létrehozása</h3>
-        <h3>IPsec</h3>
+        <h1>Videostream</h1>
+        <p>Skype</p>
+        <p>Ustream</p>
+        <p>Zoom</p>
+        <p>Twitch</p>
+        <p>Webex</p>
+        <p>Teams</p>
       </section>
     </main>
     <footer>
