--- a/osialk/abserver.html
+++ b/osialk/abserver.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Internet of Things</title>
+    <title>Az OSI-modell felső rétegei</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,21 +17,31 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Internet of Things</h1>
+      <h1 class="network">Az OSI-modell felső rétegei</h1>
     </header>
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="bev.html">Bevezetés</a></li>
+            <li><a href="szall.html">A szállítási réteg</a></li>
+            <li><a href="web.html">A világháló</a></li>
+            <li><a href="email.html">E-mail</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="fajl.html">Fájl</a></li>
+            <li><a href="streamhang.html">Hangstream</a></li>
+            <li><a href="streamvideo.html">Videostream</a></li>
+            <li><a href="print.html">Nyomtatás és fax</a></li>
+            <li><a href="hirek.html">Hírek</a></li>
+            <li><a href="taveler.html">Távoli elérés</a></li>
+            <li><a href="#" id="aktiv">Adatbázis-szerver</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
-        <h1>Internet of Things</h1>
-
-        <h3>Szenzorhálózatok és a tárgyak internete</h3>
-        <p>Intelligens szenzorok és szenzorhálózatok és az Internet of Things kapcsolata. Intelligens szenzor hardver-architektúrák. Szenzorhálózati architektúrák. Szabványosítási törekvések: IEEE 802.15.4., ZigBee protokoll, Bluetooth LE. Tipikus szenzorhálózati alkalmazási területek, esettanulmányok (egészségügy, mérnöki alkalmazások, környezetvédelem, intelligens otthon, stb.).</p>
-    
-        <h3>edureka! - Internet of Things - IoT Tutorial for Beginners | Edureka</h3>
-        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PL9ooVrP1hQOGccfBbP5tJWZ1hv5sIUWJl" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+        <h1>Adatbázis-szerver</h1>
       </section>
     </main>
     <footer>
