--- a/osialk/email.html
+++ b/osialk/email.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Hálózati ismeretek 1.</title>
+    <title>Az OSI-modell felső rétegei</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Hálózati ismeretek 1.</h1>
+      <h1 class="network">Az OSI-modell felső rétegei</h1>
     </header>
 
     <main>
@@ -25,29 +25,26 @@
         <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="#" id="aktiv">Fizikai és adatkapcsolati réteg</a></li>
-            <li><a href="projektek.html">Projektek OSI 1-2</a></li>
-            <li><a href="haloosi3.html">Hálózati réteg</a></li>
-            <li><a href="haloosi4.html">Szállítási réteg</a></li>
-            <li><a href="web.html">Világháló</a></li>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
-            <li><a href="PT.html">Packet Tracer</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+            <li><a href="bev.html">Bevezetés</a></li>
+            <li><a href="szall.html">A szállítási réteg</a></li>
+            <li><a href="web.html">A világháló</a></li>
+            <li><a href="#" id="aktiv">E-mail</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="fajl.html">Fájl</a></li>
+            <li><a href="streamhang.html">Hangstream</a></li>
+            <li><a href="streamvideo.html">Videostream</a></li>
+            <li><a href="print.html">Nyomtatás és fax</a></li>
+            <li><a href="hirek.html">Hírek</a></li>
+            <li><a href="taveler.html">Távoli elérés</a></li>
+            <li><a href="abserver.html">Adatbázis-szerver</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <h3>OSI 1-2 - Fizikai és adatkapcsolati réteg</h3>
-        <p><a href="../osi12/fizikai.html">Fizikai réteg</a></p>
-        <p><a href="../osi12/adatkapcs.html">Adatkapcsolati réteg</a></p>
-        <p><a href="../osi12/kabelek.html">Kábelek</a></p>
-        <p><a href="../osi12/switch.html">Switch (kapcsoló)</a></p>
-        <p><a href="../osi12/wireless.html">Vezeték nélküli</a></p>
-
-        <h3>Packet Tracer</h3>
-        <p><a href="PT.html">Packet Tracer</a></p>
+        <h1>E-mail</h1>
+        <p>E-mail szerverek: gmail.com, freemail.hu, citromail.hu</p>
+        <p><a href="https://drive.google.com/file/d/1kk7szBUPqprDtzUBMFOundWB_9Rp-2lp/view?usp=sharing" target=_blank>Fetchmail jegyzet</a></p>
+        <p>Levelezőprogramok: Outlook, Mail, Thunderbird</p>
       </section>
     </main>
     <footer>
