--- a/osialk/szall.html
+++ b/osialk/szall.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Szállítási réteg</title>
+    <title>Az OSI-modell felső rétegei</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,16 +17,32 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Szállítási réteg</h1>
+      <h1 class="network">Az OSI-modell felső rétegei</h1>
     </header>
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../beginhalo.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="bev.html">Bevezetés</a></li>
+            <li><a href="#" id="aktiv">A szállítási réteg</a></li>
+            <li><a href="web.html">A világháló</a></li>
+            <li><a href="email.html">E-mail</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="fajl.html">Fájl</a></li>
+            <li><a href="streamhang.html">Hangstream</a></li>
+            <li><a href="streamvideo.html">Videostream</a></li>
+            <li><a href="print.html">Nyomtatás és fax</a></li>
+            <li><a href="hirek.html">Hírek</a></li>
+            <li><a href="taveler.html">Távoli elérés</a></li>
+            <li><a href="abserver.html">Adatbázis-szerver</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Szállítási réteg</h1>
-
+        
         <p><a href="https://drive.google.com/file/d/1Zg3bT8BPszksUPeHVtOGR3Srz_hT1oJ2/view?usp=sharing" target=_blank>TCP, UDP</a></p>
     
         <h3>Péter P - TCP és UDP</h3>
