--- a/osialk/web.html
+++ b/osialk/web.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Hálózati ismeretek 2.</title>
+    <title>Az OSI-modell felső rétegei</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Hálózati ismeretek 2.</h1>
+      <h1 class="network">Az OSI-modell felső rétegei</h1>
     </header>
 
     <main>
@@ -25,16 +25,18 @@
         <p><a href="../beginhalo.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="bevhalo.html">Bevezetés</a></li>
-            <li><a href="halo1.html">Fizikai és adatkapcsolati réteg</a></li>
-            <li><a href="projektek.html">Projektek OSI 1-2</a></li>
-            <li><a href="haloosi3.html">Hálózati réteg</a></li>
-            <li><a href="haloosi4.html">Szállítási réteg</a></li>
-            <li><a href="#" id="aktiv">Világháló</a></li>
-            <li><a href="okt.html">Oktatási anyagok</a></li>
-            <li><a href="PT.html">Packet Tracer</a></li>
-            <li><a href="haloptt.html">Programtanterv</a></li>
-            <li><a href="vizsgakhalo.html">Vizsgák</a></li>
+            <li><a href="bev.html">Bevezetés</a></li>
+            <li><a href="szall.html">A szállítási réteg</a></li>
+            <li><a href="#" id="aktiv">A világháló</a></li>
+            <li><a href="email.html">E-mail</a></li>
+            <li><a href="chat.html">Chat</a></li>
+            <li><a href="fajl.html">Fájl</a></li>
+            <li><a href="streamhang.html">Hangstream</a></li>
+            <li><a href="streamvideo.html">Videostream</a></li>
+            <li><a href="print.html">Nyomtatás és fax</a></li>
+            <li><a href="hirek.html">Hírek</a></li>
+            <li><a href="taveler.html">Távoli elérés</a></li>
+            <li><a href="abserver.html">Adatbázis-szerver</a></li>
           </ul>
         </nav>
       </aside>
