--- a/5-haloanyagok/okt.html
+++ b/5-haloanyagok/okt.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Hálózati ismeretek</title>
+    <title>Anyagok</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Hálózati ismeretek</h1>
+      <h1 class="network">Anyagok</h1>
     </header>
 
     <main>
@@ -34,6 +34,7 @@
         </nav>
       </aside>
       <section>
+        <h1>Oktatási anyagok</h1>
         <h3>Cisco Hálózati Akadémia</h3>
         <p><a href="https://www.netacad.hu/" target=_blank>Cisco Hálózati Akadémia</a></p>
 
