--- a/5-haloprogiot/hpiot2.html
+++ b/5-haloprogiot/hpiot2.html
@@ -42,6 +42,15 @@
           <li>Képes Pythonban készített REST API kliens segítségével publikusan elérhető APIk használatára, a visszakapott adatok feldolgozására.</li>
           <li>Ismeri a RESTful kérések legfontosabb authentikációs metódusait (basic, token, OAuth).</li>
         </ul>
+
+        <h3>Tech With Tim - Create A Python API in 12 Minutes</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/zsYIw6RXjfM?si=EMzT9Pshz89X7_Xo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+
+        <h3>Tech With Tim - How To Create a Python API With FastAPI - Full Tutorial</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/lWsGhG6N_1E?si=-Xr0VeikNQXbASLn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+
+        <h3>Tech With Tim - Python REST API Tutorial - Building a Flask REST API</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/GMppyAPbLYk?si=5EIdVsOM_OX36O4V" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
       </section>
     </main>
     <footer>
