--- a/1-italapok/elm.html
+++ b/1-italapok/elm.html
@@ -61,7 +61,9 @@
 
         <h3 id="egz">Egzotikumok</h3>
         <p>Szuperszámítógép, Seymour Cray</p>
-        <p>Kvantumszámítógép</p>
+        
+        <h3>Programozd a jövőd! - De mik azok a kvantumszámítógépek?!</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/E0sbYyfXweU?si=A6FxFnuawgTNXhkZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
       </section>
     </main>
     <footer>
