--- a/1-italapok/1-szgtud.html
+++ b/1-italapok/1-szgtud.html
@@ -26,13 +26,16 @@
         <nav>
           <ul>
             <li><a href="#" id="aktiv">Bevezetés</a></li>
-            <li><a href="infelm.html">Információelmélet & kódelmélet</a></li>
-            <li><a href="kript.html">Kriptográfia</a></li>
-            <li><a href="binary.html">Számrendszerek</a></li>
-            <li><a href="nummat.html">Numerikus matematika I.</a></li>
-            <li><a href="r.html">Numerikus programozás</a></li>
-            <li><a href="elm.html">Számítógép-architektúrák</a></li>
-            <li><a href="projektek.html">Projektek</a></li>
+            <li><a href="szamologep.html">A számológép</a></li>
+            <li><a href="babbage.html">A számítógép</a></li>
+            <li><a href="binary.html">Kettes számrendszer</a></li>
+            <li><a href="logmuv.html">Boole-algebra</a></li>
+            <li><a href="aiken.html">Elektromechanikus gépek</a></li>
+            <li><a href="logkapu.html">Logikai áramkörök</a></li>
+            <li><a href="aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="gen.html">Elektronikus gépek</a></li>
+            <li><a href="cpu.html">A processzor</a></li>
+            <li><a href="tarcirc.html">A memória</a></li>
           </ul>
         </nav>
         <p>#processzor</p>
