--- a/1-italapok/logkapu.html
+++ b/1-italapok/logkapu.html
@@ -22,7 +22,22 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../index.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
+            <li><a href="szamologep.html">A számológép</a></li>
+            <li><a href="babbage.html">A számítógép</a></li>
+            <li><a href="binary.html">Kettes számrendszer</a></li>
+            <li><a href="logmuv.html">Boole-algebra</a></li>
+            <li><a href="aiken.html">Elektromechanikus gépek</a></li>
+            <li><a href="#" id="aktiv">Logikai áramkörök</a></li>
+            <li><a href="aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="gen.html">Elektronikus gépek</a></li>
+            <li><a href="cpu.html">A processzor</a></li>
+            <li><a href="tarcirc.html">A memória</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Logikai kapuk és áramkörök</h1>
@@ -60,6 +75,10 @@
     
         <h3>Integrált áramkör</h3>
         <p>Integrated circuit, IC</p>
+
+        <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
+        <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
+        <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
       </section>
     </main>
     <footer>
