--- a/1-italapok/cpu.html
+++ b/1-italapok/cpu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>CPU</title>
+    <title>Számítógép-tudomány</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,12 +17,27 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="italapok">CPU</h1>
+      <h1 class="italapok">Számítógép-tudomány</h1>
     </header>
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../index.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
+            <li><a href="szamologep.html">A számológép</a></li>
+            <li><a href="babbage.html">A számítógép</a></li>
+            <li><a href="binary.html">Kettes számrendszer</a></li>
+            <li><a href="logmuv.html">Boole-algebra</a></li>
+            <li><a href="aiken.html">Elektromechanikus gépek</a></li>
+            <li><a href="logkapu.html">Logikai áramkörök</a></li>
+            <li><a href="aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="gen.html">Elektronikus gépek</a></li>
+            <li><a href="#" id="aktiv">A processzor</a></li>
+            <li><a href="tarcirc.html">A memória</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>CPU</h1>
