--- a/1-italapok/logmuv.html
+++ b/1-italapok/logmuv.html
@@ -22,7 +22,22 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../index.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
+            <li><a href="szamologep.html">A számológép</a></li>
+            <li><a href="babbage.html">A számítógép</a></li>
+            <li><a href="binary.html">Kettes számrendszer</a></li>
+            <li><a href="#" id="aktiv">Boole-algebra</a></li>
+            <li><a href="aiken.html">Elektromechanikus gépek</a></li>
+            <li><a href="logkapu.html">Logikai áramkörök</a></li>
+            <li><a href="aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="gen.html">Elektronikus gépek</a></li>
+            <li><a href="cpu.html">A processzor</a></li>
+            <li><a href="tarcirc.html">A memória</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Logikai műveletek és kifejezések</h1>
