--- a/1-italapok/tarcirc.html
+++ b/1-italapok/tarcirc.html
@@ -22,10 +22,29 @@
 
     <main>
       <aside>
-        <a href="javascript:history.back()">Vissza</a>
+        <p><a href="../index.html">Vissza</a></p>
+        <nav>
+          <ul>
+            <li><a href="1-szgtud.html">Bevezetés</a></li>
+            <li><a href="szamologep.html">A számológép</a></li>
+            <li><a href="babbage.html">A számítógép</a></li>
+            <li><a href="binary.html">Kettes számrendszer</a></li>
+            <li><a href="logmuv.html">Boole-algebra</a></li>
+            <li><a href="aiken.html">Elektromechanikus gépek</a></li>
+            <li><a href="logkapu.html">Logikai áramkörök</a></li>
+            <li><a href="aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="gen.html">Elektronikus gépek</a></li>
+            <li><a href="cpu.html">A processzor</a></li>
+            <li><a href="#" id="aktiv">A memória</a></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h1>Tároló áramkörök</h1>
+
+        <h3>Belső memória és tárolt program</h3>
+        <p>Jaquard lyukkártyája</p>
+        <p>Ada Lovelace programja</p>
 
         <h3>RAM</h3>
         <p>Random Access Memory</p>
