--- a/1-italapok/tarcirc.html
+++ b/1-italapok/tarcirc.html
@@ -36,6 +36,7 @@
             <li><a href="gen.html">Elektronikus gépek</a></li>
             <li><a href="cpu.html">A processzor</a></li>
             <li><a href="#" id="aktiv">A memória</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
