--- a/1-italapok/gen.html
+++ b/1-italapok/gen.html
@@ -36,6 +36,7 @@
             <li><a href="#" id="aktiv">Elektronikus gépek</a></li>
             <li><a href="cpu.html">A processzor</a></li>
             <li><a href="tarcirc.html">A memória</a></li>
+            <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
